--- a/pages/sugerencias.html
+++ b/pages/sugerencias.html
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="variedades.html">Variedades</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="sugerencias.html">Sugerencias</a>
+                <a class="nav-link" href="nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item-shop">
                   <a class="nav-link" href="compra.html">Haz tu Pedido</a>
