Genero el fixed top en los navbars

--- a/index.html
+++ b/index.html
@@ -18,20 +18,15 @@
   </head>
   <body>
 <!-- Navbar inicia -->
-    <nav class="navbar navbar-expand-sm navbar-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="./img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapsibleNavbar"
-        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="./pages/variedades.html">Variedades</a>
@@ -51,37 +46,37 @@
     </nav>
 <!-- Navbar fin -->
 <!-- Jumbotron inicia -->
- <div class="p-5 bg-primary text-white jumbotron">
-    <h1>Tradicionales Empanadas Santiagueñas</h1>
-    <a href="./pages/nosotros.html">Conócenos</a>
- </div>
+<div class="p-5 bg-primary text-white jumbotron">
+  <h1>Tradicionales Empanadas Santiagueñas</h1>
+  <a href="./pages/nosotros.html">Conócenos</a>
+</div>
 <!-- Jumbotron fin -->
 <!-- Variedades Inicia -->
 <h2>Variedades</h2>
-   <div class="cta-variedades"><a href="./pages/compra.html">Haz tu pedido</a>
-   </div> 
-    <section class="variedades">
-        <div class=container-fluid>
-            <div class="row">
-                <div class="var1 col-sm-3">
-                    <h5>Ternera Suave</h5>
-                    <img src="./img/suave.png" alt="ternera suave" class="img-fluid">
-                </div>
-                <div class="var2 col-sm-3">
-                    <h5>Ternera Picante</h5>
-                    <img src="./img/picante.png" alt="ternera picante" class="img-fluid">
-                </div>
-                <div class="var3 col-sm-3">
-                    <h5>Mix de Verduras</h5>
-                    <img src="./img/verdura.png" alt="verduras" class="img-fluid">
-                </div>
-                <div class="var4 col-sm-3">
-                    <h5>Jamón y Queso</h5>
-                    <img src="./img/jyq.png" alt="jamon y queso" class="img-fluid">
-                </div>
+<div class="cta-variedades"><a href="./pages/compra.html">Haz tu pedido</a>
+</div> 
+  <section class="variedades">
+    <div class=container-fluid>
+        <div class="row">
+            <div class="var1 col-sm-3">
+                <h5>Ternera Suave</h5>
+                <img src="./img/suave.png" alt="ternera suave" class="img-fluid">
+            </div>
+        <div class="var2 col-sm-3">
+                <h5>Ternera Picante</h5>
+                <img src="./img/picante.png" alt="ternera picante" class="img-fluid">
+        </div>
+            <div class="var3 col-sm-3">
+                <h5>Mix de Verduras</h5>
+                <img src="./img/verdura.png" alt="verduras" class="img-fluid">
+            </div>
+        <div class="var4 col-sm-3">
+                <h5>Jamón y Queso</h5>
+                <img src="./img/jyq.png" alt="jamon y queso" class="img-fluid">
             </div>
         </div>
-    </section>
+    </div>
+  </section>
 <!-- Variedades fin -->
 <!-- Sugerencias Inicia -->
 <div class=container-fluid>
@@ -112,9 +107,9 @@
 </footer>
 <!-- Footer fin -->
 <!-- Whatsapp icon inicia -->
- <a href="#" class="whatsapp">
+<a href="#" class="whatsapp">
     <i class="fa-brands fa-whatsapp"></i>
- </a>
+</a>
 <!-- Whatsapp-icon fin -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
