--- a/pages/compra.html
+++ b/pages/compra.html
@@ -19,37 +19,32 @@
 <body>
     <header>
       <!-- Navbar inicia -->
-    <nav class="navbar navbar-expand-sm navbar-dark">
+      <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-              <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
+              <img src="/img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
           </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapsibleNavbar"
-          >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="variedades.html">Variedades</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="sugerencias.html">Sugerencias</a>
-              </li>
-              <li class="nav-item-shop">
-                  <a class="nav-link" href="#">Haz tu Pedido</a>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Home</a>
                 </li>
-            </ul>
+                <li class="nav-item">
+                  <a class="nav-link" href="variedades.html">Variedades</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="sugerencias.html">Sugerencias</a>
+                </li>
+                <li class="nav-item-shop">
+                    <a class="nav-link" href="nosotros.html">Nosotros</a>
+                  </li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
+        </nav>
   <!-- Navbar fin -->
         </header>
         <main class="compra">
