--- a/pages/variedades.html
+++ b/pages/variedades.html
@@ -19,20 +19,15 @@
 <body>
     <header>
       <!-- Navbar inicia -->
-    <nav class="navbar navbar-expand-sm navbar-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">
-              <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapsibleNavbar"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">
+            <img src="/img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="../index.html">Home</a>
