Corregi link logo navbar

--- a/pages/compra.html
+++ b/pages/compra.html
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-              <img src="/img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
+              <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
