Quite lorems agregue textos correctos

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -49,7 +49,11 @@
 <!-- Navbar fin -->
         <main class="nosotros">
             <h1>Conoce nuestra historia</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates ullam dicta vero. Minus cumque harum numquam aliquam. Enim, perferendis. Assumenda, rem ea voluptatum ipsum minus pariatur voluptatibus provident saepe, quos, autem repudiandae. Necessitatibus vitae mollitia officiis, ex nulla alias dolor dolores repudiandae magni nostrum ipsum esse inventore enim iusto voluptatem provident. Aut culpa quo assumenda aliquid debitis voluptatem excepturi nostrum porro. Soluta illo, unde, autem quidem repudiandae quos placeat, esse magni tempore provident nihil sint perferendis architecto incidunt reiciendis praesentium consequuntur a. Dolorum aspernatur sed placeat error ducimus repudiandae vitae sapiente magnam minus, recusandae rem distinctio quod explicabo amet nulla.</p>
+            <p>Este proyecto nace como un hobby durante la pandemia, en la que su fundador empezó a vender empanadas a sus vecinos cocinándolas en el horno de barro del jardín de su casa. Ante la creciente demanda, surgió la idea de a avanzar con un proyecto de negocio entre amigos en septiembre del 2022. 
+            <br>
+            <br>
+            La misión que los define es producir y comercializar empanadas de alta calidad a precios competitivos, satisfaciendo las necesidades y expectativas de sus clientes, contribuyendo al desarrollo integral del equipo humano y la generación de empleo para nuestra provincia. Buscan de esta forma, ofrecer la mejor empanada de Santiago del Estero cuidando la materia prima y sus formas de trabajo.
+            </p>
 <section>
 <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
@@ -92,8 +96,16 @@
     </button>
   </div>
 </section>
+<article>
+<p>Palos Santos, respira herencia norteña, ya que no pierde la humildad de sus materias primas y la fabricación artesanal. Son empanadas cocidas en horno tradicional norteño hecho de barro y adobe, y cocidas al fuego de leña del monte santiagueño, haciéndolas un producto de primerísima calidad.
+<br>
+<br>
+Tiene valores muy marcados en su identidad. Promueve un producto de calidad autóctono del Norte Argentino utilizando materias primas locales, generando de esta forma oportunidades de trabajo y desarrollo social en la provincia. 
+Al ser un proyecto ideado por un grupo de amigos, busca que su equipo de trabajo refleje esa unidad, transmitiendo un ambiente de trabajo de compañerismo, risas y disfrute, fomentando la capacitación y el crecimiento de sus empleados dentro de la empresa. Aspiran a promover sus ideales sin dejar de ser innovadores y creativos en el mercado.</p>
+</article>
       <a href="compra.html"><span>Haz tu pedido</span></a>
         </main>
+  <!-- Inicia footer       -->
 <footer>
 <hr>
     <p>Todos los derechos son reservados por copyright</p>
@@ -101,14 +113,14 @@
             <a href="">
                 <i class="fa-brands fa-instagram"></i>
             </a>
-             <a href="">
+            <a href="">
                 <i class="fa-brands fa-facebook"></i>
             </a>
             <a href="">
                 <i class="fa-brands fa-youtube"></i>
             </a>
         </div>
- </footer>
+</footer>
          <a href="#" class="whatsapp">
             <i class="fa-brands fa-whatsapp"></i>
          </a>
