--- a/pages/variedades.html
+++ b/pages/variedades.html
@@ -53,33 +53,33 @@
     <img class="card-img-top" src="../img/suave.png" alt="Empanada carne suave">
     <div class="card-body">
       <h4 class="card-title">Ternera Suave</h4>
-      <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis culpa magnam cumque iure libero rem.</p>
+      <p class="card-text">Nuestra preferida. Empanada de ternera cortada a cuchillo. ¡Muy jugosa!.</p>
     </div>
   </div>
   <div class="card var-tp" style="width:200px">
     <img class="card-img-top" src="../img/picante.png" alt="Empanada carne Picante">
     <div class="card-body">
       <h4 class="card-title">Ternera Picante</h4>
-      <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis culpa magnam cumque iure libero rem.</p>
+      <p class="card-text">Ir con cuidado. Para quienes conocen el sabor norteño, empanada de ternera cortada a cuchillo bien picantes.</p>
     </div>
   </div>
     <div class="card var-ve" style="width:200px">
     <img class="card-img-top" src="../img/verdura.png" alt="Empanada Verduras">
     <div class="card-body">
       <h4 class="card-title">Mix de Verduras</h4>
-      <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis culpa magnam cumque iure libero rem.</p>
+      <p class="card-text">La joyita veggie. Empanadas súper livianas de acelga, cebolla, queso y huevo.</p>
     </div>
   </div>
   <div class="card" style="width:200px">
     <img class="card-img-top" src="../img/jyq.png" alt="Empanada Jamón y Queso">
     <div class="card-body">
       <h4 class="card-title">Jamón y Queso</h4>
-      <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis culpa magnam cumque iure libero rem.</p>
+      <p class="card-text">El infaltable clásico argentino. Jamón y muuucho queso. Nada para agregar.</p>
     </div>
   </div>
 </main>
 <a href="compra.html" class="call-variedades"><p>Haz tu pedido</p></a>
- <footer>
+<footer>
     <hr>
     <p>Todos los derechos son reservados por copyright</p>
         <div class="redes">
@@ -90,24 +90,18 @@
                 <i class="fa-brands fa-facebook"></i>
             </a>
             <a href="">
-                 <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-youtube"></i>
             </a>
         </div>
 </footer>
-         <!-- Whatsapp icon inicia -->
- <a href="#" class="whatsapp">
+<!-- Whatsapp icon inicia -->
+<a href="#" class="whatsapp">
     <i class="fa-brands fa-whatsapp"></i>
- </a>
+</a>
 <!-- Whatsapp-icon fin -->
-         <script
-         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-         crossorigin="anonymous"
-       ></script>
-       <script
-         src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-         crossorigin="anonymous"
-       ></script>
-        </body>
-        </html>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+</script>
+</body>
+</html>
