agregue sass al proyecto y nestings de las pages

--- a/pages/sugerencias.html
+++ b/pages/sugerencias.html
@@ -28,7 +28,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link" href="../index.html">Home</a>
           </li>
@@ -45,43 +45,44 @@
       </div>
     </div>
   </nav>
-    </header>
+</header>
 <!-- Navbar fin -->
-    <main class="blog">
-        <h1>Aprende sobre el mundo de las empanadas</h1>
-        <div class="video">
-            <h2>Masas perfectas</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/LeUpHOvRT4Y?si=JUGmpU2jk0spgEyC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-        <hr>
-    <section>
-            <h3>Suscribete a la Newsletter</h3>
-              <p>¡Obten increibles descuentos suscribiendote a la newsletter!</p>
-              <div class="form-floating mb-2 mt-2 email">
-                <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
-                <label for="email">Ingresa tu Email</label>
-              </div>
-            <button>Enviar</button>
-        </form>   
-    </section>
-    </main>
-    <hr>
-    <footer>
-        <p>Todos los derechos son reservados por copyright</p>
-        <div class="redes">
-            <a href="">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a href="">
-                <i class="fa-brands fa-facebook"></i>
-            </a>
-            <a href="">
-                <i class="fa-brands fa-youtube"></i>
-            </a>
-        </div>
-    </footer>
-    <a href="#" class="whatsapp">
-        <i class="fa-brands fa-whatsapp"></i>
+<main class="blog">
+  <h1>Aprende sobre el mundo de las empanadas</h1>
+    <div class="video">
+      <h2>Masas perfectas</h2>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/LeUpHOvRT4Y?si=JUGmpU2jk0spgEyC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+  <hr>
+  <section>
+    <h3>Suscribete a la Newsletter</h3>
+    <p>¡Obten increibles descuentos suscribiendote a la newsletter!</p>
+    <form>
+      <div class="form-floating mb-2 mt-2 email">
+        <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
+        <label for="email">Ingresa tu Email</label>
+      </div>
+      <button>Enviar</button>
+    </form>   
+  </section>
+</main>
+<footer>
+  <hr>
+  <p>Todos los derechos son reservados por copyright</p>
+  <div class="redes">
+      <a href="">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href="">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
+      <a href="">
+        <i class="fa-brands fa-youtube"></i>
+      </a>
+  </div>
+</footer>
+<a href="#" class="whatsapp">
+    <i class="fa-brands fa-whatsapp"></i>
 </a>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
 </script>
