--- a/pages/compra.html
+++ b/pages/compra.html
@@ -13,85 +13,83 @@
 <!-- BS 5.1 Fin -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="../styles.css">
-    <link rel="shortcut icon" href="../img/logoPalos.png">
-    <title>Compra</title>
-  </head>
+<link rel="shortcut icon" href="../img/logoPalos.png">
+<title>Compra</title>
+</head>
 <body>
-    <header>
-      <!-- Navbar inicia -->
-      <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">
-              <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="variedades.html">Variedades</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="sugerencias.html">Sugerencias</a>
-                </li>
-                <li class="nav-item-shop">
-                    <a class="nav-link" href="nosotros.html">Nosotros</a>
-                  </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-  <!-- Navbar fin -->
-        </header>
-        <main class="compra">
-            <h1 class="registrate">Registrate e inicia tu compra</h1>
+<header>
+<!-- Navbar inicia -->
+  <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">
+        <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
+      </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="variedades.html">Variedades</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="sugerencias.html">Sugerencias</a>
+        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="nosotros.html">Nosotros</a>
+          </li>
+      </ul>
+    </div>
+    </div>
+  </nav>
+<!-- Navbar fin -->
+</header>
+<main class="compra container-fluid col-12">
+  <h1 class="registrate">Registrate e inicia tu compra</h1>
 <!-- Form BS inicia -->
-<form>
-    <div class="formulario">
-            <div class="form-floating mb-1 mt-1">
-                <input type="text" class="form-control" id="name" placeholder="Ingresa tu Nombre" name="nombre">
-                <label for="email">Nombre</label>
-              </div>
-              <div class="form-floating mb-1 mt-1 ">
-                <input type="text" class="form-control" id="telefono" placeholder="Ingresa tu telefono" name="telefono">
-                <label for="email">Teléfono</label>
-              </div>
-              <div class="form-floating mb-1 mt-1">
-                <input type="text" class="form-control" id="email" placeholder="Ingresa tu email" name="email">
-                <label for="email">Email</label>
-              </div>
-              <div class="form-floating mb-1 mt-1">
-                <input type="password" class="form-control" id="pwd" placeholder="Ingresa tu Contraseña" name="pswd">
-                <label for="pwd">Contraseña</label>
-              </div>
-            </div>
-<!-- Form BS fin -->
-                <button class="boton">Enviar</button>
-            </form>    
-        </main>
+<form class="formulario ">
+  <div class="form-floating mb-3 mt-3">
+    <input type="text" class="form-control" placeholder="Nombre" name="Nombre">
+    <label for="Nombre">Ingresa tu Nombre</label>
+  </div>
+  <div class="form-floating mb-3 mt-3">
+    <input type="text" class="form-control" placeholder="Domicilio" name="adress">
+    <label for="adress">Ingresa tu Domicilio</label>
+  </div>  
+  <div class="form-floating mb-3 mt-3">
+    <input type="text" class="form-control" placeholder="Email" name="email">
+    <label for="email">Ingresa tu Email</label>
+  </div>
+  <div class="form-floating mb-3 mt-3">
+    <input type="password" class="form-control" placeholder="Contraseña" name="pswd">
+    <label for="email">Ingresa tu Contraseña</label>
+  </div>
+  <button type="submit" class="btn btn-primary boton">Enviar</button>
+</form> 
+<!-- Form BS fin -->  
+</main>
 <footer>
-            <hr>
-            <p>Todos los derechos son reservados por copyright</p>
-            <div class="redes">
-                <a href="">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a href="">
-                    <i class="fa-brands fa-youtube"></i>
-                </a>
-            </div>
-        </footer>
-        <!-- Whatsapp icon inicia -->
-<a href="#" class="whatsapp">
+<hr>
+  <p>Todos los derechos son reservados por copyright</p>
+  <div class="redes">
+    <a href="">
+      <i class="fa-brands fa-instagram"></i>
+    </a>
+    <a href="">
+      <i class="fa-brands fa-facebook"></i>
+    </a>
+    <a href="">
+      <i class="fa-brands fa-youtube"></i>
+    </a>
+  </div>
+</footer>
+<!-- Whatsapp icon inicia -->
+  <a href="#" class="whatsapp">
     <i class="fa-brands fa-whatsapp"></i>
-</a>
+  </a>
 <!-- Whatsapp-icon fin -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
 </script>
