--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,8 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
 <!-- BS 5.1 Fin -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="../styles.css">
@@ -28,7 +27,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link" href="../index.html">Home</a>
           </li>
@@ -47,16 +46,16 @@
   </nav>
     </header>
 <!-- Navbar fin -->
-        <main class="nosotros">
-            <h1>Conoce nuestra historia</h1>
-            <p>Este proyecto nace como un hobby durante la pandemia, en la que su fundador empezó a vender empanadas a sus vecinos cocinándolas en el horno de barro del jardín de su casa. Ante la creciente demanda, surgió la idea de a avanzar con un proyecto de negocio entre amigos en septiembre del 2022. 
-            <br>
-            <br>
-            La misión que los define es producir y comercializar empanadas de alta calidad a precios competitivos, satisfaciendo las necesidades y expectativas de sus clientes, contribuyendo al desarrollo integral del equipo humano y la generación de empleo para nuestra provincia. Buscan de esta forma, ofrecer la mejor empanada de Santiago del Estero cuidando la materia prima y sus formas de trabajo.
-            </p>
-<section>
+<main class="nosotros">
+  <h1>Conoce nuestra historia</h1>
+    <p>Este proyecto nace como un hobby durante la pandemia, en la que su fundador empezó a vender empanadas a sus vecinos cocinándolas en el horno de barro del jardín de su casa. Ante la creciente demanda, surgió la idea de a avanzar con un proyecto de negocio entre amigos en septiembre del 2022. 
+    <br>
+    <br>
+    La misión que los define es producir y comercializar empanadas de alta calidad a precios competitivos, satisfaciendo las necesidades y expectativas de sus clientes, contribuyendo al desarrollo integral del equipo humano y la generación de empleo para nuestra provincia. Buscan de esta forma, ofrecer la mejor empanada de Santiago del Estero cuidando la materia prima y sus formas de trabajo.
+    </p>
+  <section>
 <!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
     <!-- Indicators/dots -->
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
@@ -97,42 +96,37 @@
   </div>
 </section>
 <article>
-<p>Palos Santos, respira herencia norteña, ya que no pierde la humildad de sus materias primas y la fabricación artesanal. Son empanadas cocidas en horno tradicional norteño hecho de barro y adobe, y cocidas al fuego de leña del monte santiagueño, haciéndolas un producto de primerísima calidad.
-<br>
-<br>
-Tiene valores muy marcados en su identidad. Promueve un producto de calidad autóctono del Norte Argentino utilizando materias primas locales, generando de esta forma oportunidades de trabajo y desarrollo social en la provincia. 
-Al ser un proyecto ideado por un grupo de amigos, busca que su equipo de trabajo refleje esa unidad, transmitiendo un ambiente de trabajo de compañerismo, risas y disfrute, fomentando la capacitación y el crecimiento de sus empleados dentro de la empresa. Aspiran a promover sus ideales sin dejar de ser innovadores y creativos en el mercado.</p>
+  <br>
+  <p>Palos Santos, respira herencia norteña, ya que no pierde la humildad de sus materias primas y la fabricación artesanal. Son empanadas cocidas en horno tradicional norteño hecho de barro y adobe, y cocidas al fuego de leña del monte santiagueño, haciéndolas un producto de primerísima calidad.
+  <br>
+  <br>
+  Tiene valores muy marcados en su identidad. Promueve un producto de calidad autóctono del Norte Argentino utilizando materias primas locales, generando de esta forma oportunidades de trabajo y desarrollo social en la provincia. 
+  Al ser un proyecto ideado por un grupo de amigos, busca que su equipo de trabajo refleje esa unidad, transmitiendo un ambiente de trabajo de compañerismo, risas y disfrute, fomentando la capacitación y el crecimiento de sus empleados dentro de la empresa. Aspiran a promover sus ideales sin dejar de ser innovadores y creativos en el mercado.</p>
 </article>
-      <a href="compra.html"><span>Haz tu pedido</span></a>
-        </main>
+  <a href="compra.html"><span>Haz tu pedido</span></a>
+</main>
   <!-- Inicia footer       -->
 <footer>
 <hr>
-    <p>Todos los derechos son reservados por copyright</p>
-        <div class="redes">
-            <a href="">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a href="">
-                <i class="fa-brands fa-facebook"></i>
-            </a>
-            <a href="">
-                <i class="fa-brands fa-youtube"></i>
-            </a>
-        </div>
+  <p>Todos los derechos son reservados por copyright</p>
+    <div class="redes">
+      <a href="">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href="">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
+      <a href="">
+        <i class="fa-brands fa-youtube"></i>
+      </a>
+    </div>
 </footer>
-         <a href="#" class="whatsapp">
-            <i class="fa-brands fa-whatsapp"></i>
-         </a>
-         <script
-         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-         crossorigin="anonymous"
-       ></script>
-       <script
-         src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-         crossorigin="anonymous"
-       ></script>
+<a href="#" class="whatsapp">
+  <i class="fa-brands fa-whatsapp"></i>
+</a>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+</script>
 </body>
 </html>
