--- a/pages/variedades.html
+++ b/pages/variedades.html
@@ -8,88 +8,90 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
 <!-- BS 5.1 Fin -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="../styles.css">
-    <link rel="shortcut icon" href="../img/logoPalos.png">
-    <title>Variedades</title>
-  </head>
+  <link rel="shortcut icon" href="../img/logoPalos.png">
+  <title>Variedades</title>
+</head>
 <body>
-    <header>
-      <!-- Navbar inicia -->
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-            <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="sugerencias.html">Sugerencias</a>
-              </li>
-              <li class="nav-item-shop">
-                  <a class="nav-link" href="compra.html">Haz tu Pedido</a>
-                </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-  <!-- Navbar fin -->
+<header>
+<!-- Navbar inicia -->
+  <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">
+        <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
+      </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sugerencias.html">Sugerencias</a>
+          </li>
+          <li class="nav-item-shop">
+            <a class="nav-link" href="compra.html">Haz tu Pedido</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+<!-- Navbar fin -->
 <!-- Cards Variedades Inicia -->
 <main class="variedades">
-  <div class="card var-ts" style="width:200px">
-    <img class="card-img-top" src="../img/suave.png" alt="Empanada carne suave">
+  <h1>Conoce nuestras variedades</h1>
+  <div class="variedades-cards">
+  <div class="card" style="width:200px">
+    <img class="card-img-top mb-0" src="../img/suave.png" alt="Empanada carne suave">
     <div class="card-body">
-      <h4 class="card-title">Ternera Suave</h4>
+      <h2 class="card-title">Ternera Suave</h2>
       <p class="card-text">Nuestra preferida. Empanada de ternera cortada a cuchillo. ¡Muy jugosa!.</p>
     </div>
   </div>
-  <div class="card var-tp" style="width:200px">
-    <img class="card-img-top" src="../img/picante.png" alt="Empanada carne Picante">
+  <div class="card" style="width:200px">
+    <img class="card-img-top mb-0" src="../img/picante.png" alt="Empanada carne Picante">
     <div class="card-body">
-      <h4 class="card-title">Ternera Picante</h4>
+      <h2 class="card-title">Ternera Picante</h2>
       <p class="card-text">Ir con cuidado. Para quienes conocen el sabor norteño, empanada de ternera cortada a cuchillo bien picantes.</p>
     </div>
   </div>
-    <div class="card var-ve" style="width:200px">
-    <img class="card-img-top" src="../img/verdura.png" alt="Empanada Verduras">
+    <div class="card" style="width:200px">
+    <img class="card-img-top mb-0" src="../img/verdura.png" alt="Empanada Verduras">
     <div class="card-body">
-      <h4 class="card-title">Mix de Verduras</h4>
+      <h2 class="card-title">Mix de Verduras</h2>
       <p class="card-text">La joyita veggie. Empanadas súper livianas de acelga, cebolla, queso y huevo.</p>
     </div>
   </div>
   <div class="card" style="width:200px">
-    <img class="card-img-top" src="../img/jyq.png" alt="Empanada Jamón y Queso">
+    <img class="card-img-top mb-0" src="../img/jyq.png" alt="Empanada Jamón y Queso">
     <div class="card-body">
-      <h4 class="card-title">Jamón y Queso</h4>
+      <h2 class="card-title">Jamón y Queso</h2>
       <p class="card-text">El infaltable clásico argentino. Jamón y muuucho queso. Nada para agregar.</p>
     </div>
   </div>
+</div>
 </main>
 <a href="compra.html" class="call-variedades"><p>Haz tu pedido</p></a>
 <footer>
     <hr>
     <p>Todos los derechos son reservados por copyright</p>
         <div class="redes">
-            <a href="">
+            <a href="#">
                 <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="">
+            <a href="#">
                 <i class="fa-brands fa-facebook"></i>
             </a>
-            <a href="">
+            <a href="#">
                 <i class="fa-brands fa-youtube"></i>
             </a>
         </div>
