--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Home de Palos Santos. Delivery de empanadas caseras en santiago del estero, Argentina.">
+    <meta name="keywords" content="empanadas santiagueña tradicional comida delivery palos santos">
 <!-- BS 5.1 Inicia -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
