--- a/pages/compra.html
+++ b/pages/compra.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Haz tu pedido en Palos Santos. Delivery online de empanadas. Rellena el formulario.">
+    <meta name="keywords" content="empanadas datos compra comida delivery palos santos ordenar">
 <!-- BS 5.1 Inicia -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
