--- a/pages/sugerencias.html
+++ b/pages/sugerencias.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Sugerencias de Palos Santos. Aprende sobre empanadas y dejate tentar. Suscribete para conocer más.">
+    <meta name="keywords" content="empanadas cocina tradicional video comida delivery suscripcion mail palos santos">
 <!-- BS 5.1 Inicia -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -70,13 +72,13 @@
   <hr>
   <p>Todos los derechos son reservados por copyright</p>
   <div class="redes">
-      <a href="">
+      <a href="#">
         <i class="fa-brands fa-instagram"></i>
       </a>
-      <a href="">
+      <a href="#">
         <i class="fa-brands fa-facebook"></i>
       </a>
-      <a href="">
+      <a href="#">
         <i class="fa-brands fa-youtube"></i>
       </a>
   </div>
