--- a/pages/variedades.html
+++ b/pages/variedades.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Variedades de empanadas servicio de delivery Palos Santos. Carne cortada a cuchillo, jamón y queso, verduras.">
+    <meta name="keywords" content="empanadas comida delivery palos santos ternera carne jamon queso verduras picante">
 <!-- BS 5.1 Inicia -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
