--- a/pages/sugerencias.html
+++ b/pages/sugerencias.html
@@ -14,6 +14,7 @@
     />
 <!-- BS 5.1 Fin -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link rel="stylesheet" href="../styles.css">
     <link rel="shortcut icon" href="../img/logoPalos.png">
     <title>Conócenos</title>
@@ -53,7 +54,13 @@
   <h1>Aprende sobre el mundo de las empanadas</h1>
     <div class="video">
       <h2>Masas perfectas</h2>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/LeUpHOvRT4Y?si=JUGmpU2jk0spgEyC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe data-aos="fade-up-right" width="560" height="315" src="https://www.youtube.com/embed/LeUpHOvRT4Y?si=JUGmpU2jk0spgEyC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    </div>
+    <div class="sugerencia">
+      <h2>Empanada de la semana</h2>
+      <img data-aos="fade-left" src="../img/relleno jyq.jpg" alt="relleno de empanda de jamon y queso">
+    </div>
     </div>
   <hr>
   <section>
@@ -89,6 +96,10 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+</script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
 </script>
 </body>
 </html>
