acomode identacion scss e incorpore netlify a los forms

--- a/pages/compra.html
+++ b/pages/compra.html
@@ -52,7 +52,7 @@
 <main class="compra container-fluid col-12">
   <h1 class="registrate">Registrate e inicia tu compra</h1>
 <!-- Form BS inicia -->
-<form class="formulario ">
+<form class="formulario" method="post" name="formulario-compra" netlify>
   <div class="form-floating mb-3 mt-3">
     <input type="text" class="form-control" placeholder="Nombre" name="Nombre">
     <label for="Nombre">Ingresa tu Nombre</label>
