--- a/pages/sugerencias.html
+++ b/pages/sugerencias.html
@@ -66,7 +66,7 @@
   <section>
     <h3>Suscribete a la Newsletter</h3>
     <p>¡Obten increibles descuentos suscribiendote a la newsletter!</p>
-    <form>
+    <form method="post" name="newsletter" nelify>
       <div class="form-floating mb-2 mt-2 email">
         <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
         <label for="email">Ingresa tu Email</label>
