mejora estetica y diseños responsive

--- a/index.html
+++ b/index.html
@@ -54,31 +54,33 @@
 </div>
 <!-- Jumbotron fin -->
 <!-- Variedades Inicia -->
-<h2>Variedades</h2>
-<div class="cta-variedades"><a href="./pages/compra.html">Haz tu pedido</a>
-</div>
-  <section class="variedades">
-    <div class=container-fluid>
-      <div class="row">
-            <div class="var1 col-sm-3">
-                <h4>Ternera Suave</h4>
-                <img src="./img/suave.png" alt="ternera suave" class="img-fluid">
-            </div>
-        <div class="var2 col-sm-3">
-                <h4>Ternera Picante</h4>
-                <img src="./img/picante.png" alt="ternera picante" class="img-fluid">
-        </div>
-            <div class="var3 col-sm-3">
-                <h4>Mix de Verduras</h4>
-                <img src="./img/verdura.png" alt="verduras" class="img-fluid">
-            </div>
-        <div class="var4 col-sm-3">
-                <h4>Jamón y Queso</h4>
-                <img src="./img/jyq.png" alt="jamon y queso" class="img-fluid">
-            </div>
-      </div>
+<section class="sect-variedades">
+  <h2>Variedades</h2>
+  <div class="cta-variedades"><a href="./pages/compra.html">Haz tu pedido</a>
+  </div>
+  <div class="variedades">
+    <div class="variedad1">
+      <h4>Ternera Suave</h4>
+      <img src="./img/suave.png" alt="empanada de ternera suave">
+      <p>Ternera cortada a cuchillo</p>
     </div>
-  </section>
+    <div class="variedad2">
+      <h4>Ternera Picante</h4>
+      <img src="./img/picante.png" alt="empanada de ternera picante">
+      <p>Ternera cortada a cuchillo picante</p>
+    </div>
+    <div class="variedad3">
+      <h4>Mix de Verduras</h4>
+      <img src="./img/verdura.png" alt="empanada de verduras">
+      <p>Acelga, cebolla, queso y huevo</p>
+    </div>
+    <div class="variedad4">
+      <h4>Jamón y Queso</h4>
+      <img src="./img/jyq.png" alt="empanada de jamon y queso">
+      <p>Jamón y queso</p>
+    </div>
+  </div> 
+</section>
 <!-- Variedades fin -->
 <!-- Sugerencias Inicia -->
 <div class=container-fluid>
@@ -96,7 +98,7 @@
     <hr>
     <p>Todos los derechos son reservados por copyright</p>
     <div class="redes">
-        <a href="#">
+        <a href="https://www.instagram.com/palossantos.sgo/">
             <i class="fa-brands fa-instagram"></i>
         </a>
         <a href="#">
@@ -109,7 +111,7 @@
 </footer>
 <!-- Footer fin -->
 <!-- Whatsapp icon inicia -->
-<a href="#" class="whatsapp">
+<a href="tel: +5493855388201" class="whatsapp">
     <i class="fa-brands fa-whatsapp"></i>
 </a>
 <!-- Whatsapp-icon fin -->
