--- a/pages/compra.html
+++ b/pages/compra.html
@@ -55,19 +55,23 @@
 <form class="formulario" method="post" name="formulario-compra" netlify>
   <div class="form-floating mb-3 mt-3">
     <input type="text" class="form-control" placeholder="Nombre" name="Nombre">
-    <label for="Nombre">Ingresa tu Nombre</label>
+    <label for="Nombre">Nombre y Apellido</label>
   </div>
   <div class="form-floating mb-3 mt-3">
     <input type="text" class="form-control" placeholder="Domicilio" name="adress">
-    <label for="adress">Ingresa tu Domicilio</label>
+    <label for="adress">Domicilio</label>
+  </div>  
+  <div class="form-floating mb-3 mt-3">
+    <input type="number" class="form-control" placeholder="Telefono" name="phone">
+    <label for="phone">Teléfono</label>
   </div>  
   <div class="form-floating mb-3 mt-3">
     <input type="text" class="form-control" placeholder="Email" name="email">
-    <label for="email">Ingresa tu Email</label>
+    <label for="email">Email</label>
   </div>
   <div class="form-floating mb-3 mt-3">
     <input type="password" class="form-control" placeholder="Contraseña" name="pswd">
-    <label for="email">Ingresa tu Contraseña</label>
+    <label for="email">Contraseña</label>
   </div>
   <button type="submit" class="btn btn-primary boton">Enviar</button>
 </form> 
@@ -77,19 +81,19 @@
 <hr>
   <p>Todos los derechos son reservados por copyright</p>
   <div class="redes">
-    <a href="">
+    <a href="https://www.instagram.com/palossantos.sgo/">
       <i class="fa-brands fa-instagram"></i>
     </a>
-    <a href="">
+    <a href="#">
       <i class="fa-brands fa-facebook"></i>
     </a>
-    <a href="">
+    <a href="#">
       <i class="fa-brands fa-youtube"></i>
     </a>
   </div>
 </footer>
 <!-- Whatsapp icon inicia -->
-  <a href="#" class="whatsapp">
+  <a href="tel: +5493855388201" class="whatsapp">
     <i class="fa-brands fa-whatsapp"></i>
   </a>
 <!-- Whatsapp-icon fin -->
