--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -112,18 +112,18 @@
 <hr>
   <p>Todos los derechos son reservados por copyright</p>
     <div class="redes">
-      <a href="">
+      <a href="https://www.instagram.com/palossantos.sgo/">
         <i class="fa-brands fa-instagram"></i>
       </a>
-      <a href="">
+      <a href="#">
         <i class="fa-brands fa-facebook"></i>
       </a>
-      <a href="">
+      <a href="#">
         <i class="fa-brands fa-youtube"></i>
       </a>
     </div>
 </footer>
-<a href="#" class="whatsapp">
+<a href="tel: +5493855388201" class="whatsapp">
   <i class="fa-brands fa-whatsapp"></i>
 </a>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
