--- a/pages/sugerencias.html
+++ b/pages/sugerencias.html
@@ -54,19 +54,23 @@
   <h1>Aprende sobre el mundo de las empanadas</h1>
     <div class="video">
       <h2>Masas perfectas</h2>
+      <p>Aprende a hacer las mejores masas con este video</p>
       <iframe data-aos="fade-up-right" width="560" height="315" src="https://www.youtube.com/embed/LeUpHOvRT4Y?si=JUGmpU2jk0spgEyC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </div>
     </div>
     <div class="sugerencia">
       <h2>Empanada de la semana</h2>
+      <p>Te mereces este mimo: Empanadas bien rellenas de Jamón y Queso</p>
       <img data-aos="fade-left" src="../img/relleno jyq.jpg" alt="relleno de empanda de jamon y queso">
+      <h2>Cómo cocinarlas</h2>
+      <p>El secreto para que tus empandas queden bien jugosas, es precalentar el horno a temperatura máxima. Una vez que esté bien caliente, ponerlas en una fuente directo sobre la base del horno. En 3 minutos, cuando veas la masa dorada, están listas. ¡A disfrutar!</p>
+      <img data-aos="fade-right" src="../img/cocidas.jpg" alt="empandas cocinadas al horno">
     </div>
-    </div>
+  </main>
   <hr>
-  <section>
+  <section class="newsletter">
     <h3>Suscribete a la Newsletter</h3>
     <p>¡Obten increibles descuentos suscribiendote a la newsletter!</p>
-    <form method="post" name="newsletter" nelify>
+    <form method="post" name="newsletter" netlify>
       <div class="form-floating mb-2 mt-2 email">
         <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
         <label for="email">Ingresa tu Email</label>
@@ -74,12 +78,11 @@
       <button>Enviar</button>
     </form>   
   </section>
-</main>
 <footer>
   <hr>
   <p>Todos los derechos son reservados por copyright</p>
   <div class="redes">
-      <a href="#">
+      <a href="https://www.instagram.com/palossantos.sgo/">
         <i class="fa-brands fa-instagram"></i>
       </a>
       <a href="#">
@@ -90,7 +93,7 @@
       </a>
   </div>
 </footer>
-<a href="#" class="whatsapp">
+<a href="tel: +5493855388201" class="whatsapp">
     <i class="fa-brands fa-whatsapp"></i>
 </a>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
