--- a/pages/variedades.html
+++ b/pages/variedades.html
@@ -87,7 +87,7 @@
     <hr>
     <p>Todos los derechos son reservados por copyright</p>
         <div class="redes">
-            <a href="#">
+            <a href="https://www.instagram.com/palossantos.sgo/">
                 <i class="fa-brands fa-instagram"></i>
             </a>
             <a href="#">
@@ -99,7 +99,7 @@
         </div>
 </footer>
 <!-- Whatsapp icon inicia -->
-<a href="#" class="whatsapp">
+<a href="tel: +5493855388201" class="whatsapp">
     <i class="fa-brands fa-whatsapp"></i>
 </a>
 <!-- Whatsapp-icon fin -->
