agregue mixins, labels y mejore cards

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- Navbar inicia -->
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a aria-label="Home Palos Santos" class="navbar-brand" href="#">
             <img src="./img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -31,16 +31,16 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="./pages/variedades.html">Variedades</a>
+              <a aria-label="Conoce las Variedades" class="nav-link" href="./pages/variedades.html">Variedades</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+              <a aria-label="Conoce más acerca de nosotros" class="nav-link" href="./pages/nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/sugerencias.html">Sugerencias</a>
+              <a aria-label="Estas son nuestras segerencias" class="nav-link" href="./pages/sugerencias.html">Sugerencias</a>
             </li>
             <li class="nav-item-shop">
-                <a class="nav-link" href="./pages/compra.html">Haz tu Pedido</a>
+                <a aria-label="Compra tus empanadas" class="nav-link" href="./pages/compra.html">Haz tu Pedido</a>
               </li>
           </ul>
         </div>
@@ -50,7 +50,7 @@
 <!-- Jumbotron inicia -->
 <div class="p-5 bg-primary text-white jumbotron">
   <h1>Tradicionales Empanadas Santiagueñas</h1>
-  <a href="./pages/nosotros.html">Conócenos</a>
+  <a aria-label="Conoce más acerca de nosotros" href="./pages/nosotros.html">Conócenos</a>
 </div>
 <!-- Jumbotron fin -->
 <!-- Variedades Inicia -->
@@ -98,13 +98,13 @@
     <hr>
     <p>Todos los derechos son reservados por copyright</p>
     <div class="redes">
-        <a href="https://www.instagram.com/palossantos.sgo/">
+        <a aria-label="instagram Palos Santos" href="https://www.instagram.com/palossantos.sgo/">
             <i class="fa-brands fa-instagram"></i>
         </a>
-        <a href="#">
+        <a aria-label="Facebook Palos Santos" href="#">
             <i class="fa-brands fa-facebook"></i>
         </a>
-        <a href="#">
+        <a aria-label="Youtube Palos Santos" href="#">
             <i class="fa-brands fa-youtube"></i>
         </a>
     </div>
