--- a/pages/compra.html
+++ b/pages/compra.html
@@ -23,7 +23,7 @@
 <!-- Navbar inicia -->
   <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html">
+      <a aria-label="Home Palos Santos" class="navbar-brand" href="../index.html">
         <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
       </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -32,16 +32,16 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Home</a>
+          <a aria-label="Home Palos Santos" class="nav-link" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="variedades.html">Variedades</a>
+          <a aria-label="Conoce las Variedades" class="nav-link" href="variedades.html">Variedades</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="sugerencias.html">Sugerencias</a>
+          <a aria-label="Estas son nuestras sugerencias" class="nav-link" href="sugerencias.html">Sugerencias</a>
         </li>
           <li class="nav-item">
-            <a class="nav-link" href="nosotros.html">Nosotros</a>
+            <a aria-label="Conoce más acerca de nosotros" class="nav-link" href="nosotros.html">Nosotros</a>
           </li>
       </ul>
     </div>
@@ -73,7 +73,7 @@
     <input type="password" class="form-control" placeholder="Contraseña" name="pswd">
     <label for="email">Contraseña</label>
   </div>
-  <button type="submit" class="btn btn-primary boton">Enviar</button>
+  <button id="Enviar" type="submit" class="btn btn-primary boton">Enviar</button>
 </form> 
 <!-- Form BS fin -->  
 </main>
@@ -81,13 +81,13 @@
 <hr>
   <p>Todos los derechos son reservados por copyright</p>
   <div class="redes">
-    <a href="https://www.instagram.com/palossantos.sgo/">
+    <a aria-label="instagram Palos Santos" href="https://www.instagram.com/palossantos.sgo/">
       <i class="fa-brands fa-instagram"></i>
     </a>
-    <a href="#">
+    <a aria-label="Facebook Palos Santos" href="#">
       <i class="fa-brands fa-facebook"></i>
     </a>
-    <a href="#">
+    <a aria-label="Youtube Palos Santos" href="#">
       <i class="fa-brands fa-youtube"></i>
     </a>
   </div>
