--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -22,7 +22,7 @@
 <!-- Navbar inicia -->
 <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="../index.html">
+    <a aria-label="Home Palos Santos" class="navbar-brand" href="../index.html">
         <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -31,16 +31,16 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="../index.html">Home</a>
+            <a aria-label="Home Palos Santos" class="nav-link" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="variedades.html">Variedades</a>
+            <a aria-label="Conoce las Variedades" class="nav-link" href="variedades.html">Variedades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sugerencias.html">Sugerencias</a>
+            <a aria-label="Estas son nuestras sugerencias" class="nav-link" href="sugerencias.html">Sugerencias</a>
           </li>
           <li class="nav-item-shop">
-              <a class="nav-link" href="compra.html">Haz tu Pedido</a>
+              <a aria-label="Compra tus empanadas" class="nav-link" href="compra.html">Haz tu Pedido</a>
             </li>
         </ul>
       </div>
@@ -51,7 +51,6 @@
 <main class="nosotros">
   <h1>Conoce nuestra historia</h1>
     <p>Este proyecto nace como un hobby durante la pandemia, en la que su fundador empezó a vender empanadas a sus vecinos cocinándolas en el horno de barro del jardín de su casa. Ante la creciente demanda, surgió la idea de a avanzar con un proyecto de negocio entre amigos en septiembre del 2022. 
-    <br>
     <br>
     La misión que los define es producir y comercializar empanadas de alta calidad a precios competitivos, satisfaciendo las necesidades y expectativas de sus clientes, contribuyendo al desarrollo integral del equipo humano y la generación de empleo para nuestra provincia. Buscan de esta forma, ofrecer la mejor empanada de Santiago del Estero cuidando la materia prima y sus formas de trabajo.
     </p>
@@ -89,10 +88,10 @@
       </div>
     </div>
       <!-- Left and right controls/icons -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <button id="previo" class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
       <span class="carousel-control-prev-icon"></span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <button id="siguiente" class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
       <span class="carousel-control-next-icon"></span>
     </button>
   </div>
@@ -101,24 +100,23 @@
   <br>
   <p>Palos Santos, respira herencia norteña, ya que no pierde la humildad de sus materias primas y la fabricación artesanal. Son empanadas cocidas en horno tradicional norteño hecho de barro y adobe, y cocidas al fuego de leña del monte santiagueño, haciéndolas un producto de primerísima calidad.
   <br>
-  <br>
   Tiene valores muy marcados en su identidad. Promueve un producto de calidad autóctono del Norte Argentino utilizando materias primas locales, generando de esta forma oportunidades de trabajo y desarrollo social en la provincia. 
   Al ser un proyecto ideado por un grupo de amigos, busca que su equipo de trabajo refleje esa unidad, transmitiendo un ambiente de trabajo de compañerismo, risas y disfrute, fomentando la capacitación y el crecimiento de sus empleados dentro de la empresa. Aspiran a promover sus ideales sin dejar de ser innovadores y creativos en el mercado.</p>
 </article>
-  <a href="compra.html"><span>Haz tu pedido</span></a>
+  <a aria-label="Compra tus empanadas" href="compra.html"><span>Haz tu pedido</span></a>
 </main>
-  <!-- Inicia footer       -->
+  <!-- Inicia footer -->
 <footer>
 <hr>
   <p>Todos los derechos son reservados por copyright</p>
     <div class="redes">
       <a href="https://www.instagram.com/palossantos.sgo/">
-        <i class="fa-brands fa-instagram"></i>
+        <i aria-label="instagram Palos Santos" class="fa-brands fa-instagram"></i>
       </a>
-      <a href="#">
+      <a aria-label="Facebook Palos Santos" href="#">
         <i class="fa-brands fa-facebook"></i>
       </a>
-      <a href="#">
+      <a aria-label="Youtube Palos Santos" href="#">
         <i class="fa-brands fa-youtube"></i>
       </a>
     </div>
