--- a/pages/sugerencias.html
+++ b/pages/sugerencias.html
@@ -24,7 +24,7 @@
 <!-- Navbar inicia -->
 <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="../index.html">
+    <a aria-label="Home Palos Santos" class="navbar-brand" href="../index.html">
         <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -33,16 +33,16 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="../index.html">Home</a>
+            <a aria-label="Home Palos Santos" class="nav-link" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="variedades.html">Variedades</a>
+            <a aria-label="Conoce las Variedades" class="nav-link" href="variedades.html">Variedades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="nosotros.html">Nosotros</a>
+            <a aria-label="Conoce más acerca de nosotros" class="nav-link" href="nosotros.html">Nosotros</a>
           </li>
           <li class="nav-item-shop">
-              <a class="nav-link" href="compra.html">Haz tu Pedido</a>
+              <a aria-label="Compra tus empanadas" class="nav-link" href="compra.html">Haz tu Pedido</a>
             </li>
         </ul>
       </div>
@@ -75,20 +75,20 @@
         <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
         <label for="email">Ingresa tu Email</label>
       </div>
-      <button>Enviar</button>
+      <button id="Enviar">Enviar</button>
     </form>   
   </section>
 <footer>
   <hr>
   <p>Todos los derechos son reservados por copyright</p>
   <div class="redes">
-      <a href="https://www.instagram.com/palossantos.sgo/">
+      <a aria-label="instagram Palos Santos" href="https://www.instagram.com/palossantos.sgo/">
         <i class="fa-brands fa-instagram"></i>
       </a>
       <a href="#">
-        <i class="fa-brands fa-facebook"></i>
+        <i aria-label="Facebook Palos Santos" class="fa-brands fa-facebook"></i>
       </a>
-      <a href="#">
+      <a aria-label="Youtube Palos Santos" href="#">
         <i class="fa-brands fa-youtube"></i>
       </a>
   </div>
