--- a/pages/variedades.html
+++ b/pages/variedades.html
@@ -22,7 +22,7 @@
 <!-- Navbar inicia -->
   <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html">
+      <a aria-label="Home Palos Santos" class="navbar-brand" href="../index.html">
         <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
       </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -31,16 +31,16 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="../index.html">Home</a>
+            <a aria-label="Home Palos Santos" class="nav-link" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="nosotros.html">Nosotros</a>
+            <a aria-label="Conoce más acerca de nosotros" class="nav-link" href="nosotros.html">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sugerencias.html">Sugerencias</a>
+            <a aria-label="Estas son nuestras sugerencias"class="nav-link" href="sugerencias.html">Sugerencias</a>
           </li>
           <li class="nav-item-shop">
-            <a class="nav-link" href="compra.html">Haz tu Pedido</a>
+            <a aria-label="Compra tus empanadas" class="nav-link" href="compra.html">Haz tu Pedido</a>
           </li>
         </ul>
       </div>
@@ -81,28 +81,28 @@
     </div>
   </div>
 </div>
+<a aria-label="Compra tus empanadas" href="compra.html" class="call-variedades"><p>Haz tu pedido</p></a>
 </main>
-<a href="compra.html" class="call-variedades"><p>Haz tu pedido</p></a>
+<!-- Whatsapp icon inicia -->
+<a href="tel: +5493855388201" class="whatsapp">
+  <i class="fa-brands fa-whatsapp"></i>
+</a>
+<!-- Whatsapp-icon fin -->
 <footer>
     <hr>
     <p>Todos los derechos son reservados por copyright</p>
-        <div class="redes">
+        <div aria-label="instagram Palos Santos" class="redes">
             <a href="https://www.instagram.com/palossantos.sgo/">
                 <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="#">
+            <a aria-label="Facebook Palos Santos" href="#">
                 <i class="fa-brands fa-facebook"></i>
             </a>
-            <a href="#">
+            <a aria-label="Youtube Palos Santos" href="#">
                 <i class="fa-brands fa-youtube"></i>
             </a>
         </div>
 </footer>
-<!-- Whatsapp icon inicia -->
-<a href="tel: +5493855388201" class="whatsapp">
-    <i class="fa-brands fa-whatsapp"></i>
-</a>
-<!-- Whatsapp-icon fin -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
