--- a/pages/sugerencias.html
+++ b/pages/sugerencias.html
@@ -27,7 +27,7 @@
     <a aria-label="Home Palos Santos" class="navbar-brand" href="../index.html">
         <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+    <button id="Menu" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -94,7 +94,7 @@
   </div>
 </footer>
 <a href="tel: +5493855388201" class="whatsapp">
-    <i class="fa-brands fa-whatsapp"></i>
+    <i aria-label="whatsapp" class="fa-brands fa-whatsapp"></i>
 </a>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
 </script>
