--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a aria-label="Home Palos Santos" class="navbar-brand" href="#">
             <img src="./img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <button id="Menu" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -50,7 +50,7 @@
 <!-- Jumbotron inicia -->
 <div class="p-5 bg-primary text-white jumbotron">
   <h1>Tradicionales Empanadas Santiagueñas</h1>
-  <a aria-label="Conoce más acerca de nosotros" href="./pages/nosotros.html">Conócenos</a>
+  <a aria-label="Conocenos" href="./pages/nosotros.html">Conócenos</a>
 </div>
 <!-- Jumbotron fin -->
 <!-- Variedades Inicia -->
@@ -111,7 +111,7 @@
 </footer>
 <!-- Footer fin -->
 <!-- Whatsapp icon inicia -->
-<a href="tel: +5493855388201" class="whatsapp">
+<a aria-label="whatsapp" href="tel: +5493855388201" class="whatsapp">
     <i class="fa-brands fa-whatsapp"></i>
 </a>
 <!-- Whatsapp-icon fin -->
