--- a/pages/variedades.html
+++ b/pages/variedades.html
@@ -25,7 +25,7 @@
       <a aria-label="Home Palos Santos" class="navbar-brand" href="../index.html">
         <img src="../img/palosSantos.png" alt="Logo Palos Santos" style="width:150px;"> 
       </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+    <button id="Menu" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -85,7 +85,7 @@
 </main>
 <!-- Whatsapp icon inicia -->
 <a href="tel: +5493855388201" class="whatsapp">
-  <i class="fa-brands fa-whatsapp"></i>
+  <i aria-label="whatsapp" class="fa-brands fa-whatsapp"></i>
 </a>
 <!-- Whatsapp-icon fin -->
 <footer>
